# learning

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindAllegro5.cmake
embed/: CMakeLists.txt  embed.cpp  embed.h  embed_test.cpp  embeder.cpp
include/: allegro.hh  plugin.h
plugins/: CMakeLists.txt  api.h  plugin1.cpp  plugin2.cpp
scripts/: learning.py
